@@ -9,7 +9,7 @@ requires "HTTP::AcceptLanguage"           => "0.02";
 requires "IRC::Utils"                     => "0.12";
 requires "LinkEmbedder"                   => "1.20";
 requires "Module::Install"                => "1.10"; # required by Text::MultiMarkdown
-requires "Mojolicious"                    => "9.14";
+requires "Mojolicious"                    => "9.20";
 requires "Mojolicious::Plugin::OpenAPI"   => "4.02";
 requires "Mojolicious::Plugin::Syslog"    => "0.06";
 requires "Mojolicious::Plugin::Webpack"   => "1.01";
