@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 6.49 Not Released
+ - Replaced CONVOS_DEBUG=1 with CONVOS_LOG_LEVEL=trace
  - Updated Italian translation #654
    Contributor: SerHack
 
